--- a/internship_system/placement/templates/company/dashboard.html
+++ b/internship_system/placement/templates/company/dashboard.html
@@ -23,7 +23,7 @@
             <p>{{ pending_applications }}</p>
         </a>
 
-        <a href="#" class="card">
+        <a href="{% url 'company_logbook_review' %}" class="card">
             <h3>Logbooks Approval</h3>
             <p>{{ pending_logbooks }}</p>
         </a>
