update evaluation logic

--- a/internship_system/placement/templates/company/evaluation.html
+++ b/internship_system/placement/templates/company/evaluation.html
@@ -33,7 +33,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    {% if placement.status != "Completed" %}
+                    {% if not placement.can_evaluate %}
                         <span class="action-disabled">Not accessible yet</span>
 
                     {% elif placement.is_evaluated %}
