change textare to input in evaluation page

--- a/internship_system/placement/templates/company/evaluation_form.html
+++ b/internship_system/placement/templates/company/evaluation_form.html
@@ -49,7 +49,7 @@
     <hr>
 
     <p>Intern's Grade</p>
-    <textarea class="interns-score" name="comment" name="score" min="0" max="100" required></textarea>
+    <input type="number" class="interns-score" name="score" min="0" max="100" required></input>
 
     <hr>
 
